<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_history"
        android:title="@string/shopping_history"
        android:icon="@drawable/ic_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reminders"
        android:title="@string/reminders"
        android:icon="@android:drawable/ic_menu_recent_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_pantry"
        android:title="@string/pantry"
        android:icon="@drawable/ic_pantry"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_analytics"
        android:title="@string/analytics"
        android:icon="@drawable/ic_analytics"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_join_list"
        android:title="@string/join_list"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/sign_out"
        android:icon="@android:drawable/ic_lock_power_off"
        app:showAsAction="never" />
</menu>