<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort_category"
        android:title="@string/sort_category"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_alpha"
        android:title="@string/sort_alpha"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_priority"
        android:title="@string/sort_priority"
        android:icon="@android:drawable/ic_menu_agenda"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_date"
        android:title="@string/sort_date"
        android:icon="@android:drawable/ic_menu_recent_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_completed"
        android:title="@string/clear_completed"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="never" />
</menu>